# NoteManager

./: .gitignore  CMakeLists.txt  LICENSE  NoteManager.sln  NoteManager.vcxproj  NoteManager.vcxproj.filters  README.md
include/: Note.h  NoteManager.h  mainwindow.h
resources/: MainWindow.qrc
src/: Note.cpp  NoteManager.cpp  main.cpp
ui/: MainWindow.ui  NoteManager.ui
